<resources>
    <string name="app_name">N2KWind</string>

    <string name="WIND_SPEED_FORMAT" translatable="false">%.1f Kn</string>
    <string name="WIND_DIR_FORMAT" translatable="false">%d\u00B0 %s</string>
    <string name="WIND_DIR_OFFSET_FORMAT" translatable="false">%+d\u00B0</string>
    <string name="HEAP_FORMAT" translatable="false">Heap %,d B</string>
    <string name="CALIB_FORMAT" translatable="false">%d</string>
    <string name="CALIB_ELLIPSE_FORMAT" translatable="false">%.2f</string>
    <string name="ALPHA_FORMAT">%.2f</string>
    <string name="NO_VALUE_STRING" translatable="false">-</string>

    <string name="calibration_card_title">Calibration</string>
    <string name="data_card_title">Data</string>
    <string name="scan_card_title">Devices</string>

    <string name="manual_calibration_btn">Manual calibration change</string>
    <string name="speed_adjustment_btn">Speed adjustment</string>
    <string name="start_calibration_btn">Calibrate</string>
    <string name="cancel_calibration_btn">Cancel</string>
    <string name="commit_calibration_btn">Commit</string>

    <string name="data_heap_label">Heap (KB)</string>
    <string name="heap_label">Heap (KB)</string>
    <string name="wind_dir_label">AWD</string>
    <string name="wind_speed_label">AWS</string>
    <string name="wind_speed_adj_label">Speed Adj.</string>
    <string name="calib_ellipse_error_label">Ellipse</string>
    <string name="wind_dir_offset_label">Offset</string>
    <string name="cos_label">Cos</string>
    <string name="sin_label">Sin</string>
    <string name="direction_smoothing_label">Direction 𝛂</string>
    <string name="speed_smoothing_label">Speed 𝛂</string>
    <string name="auto_calibration_label">Auto</string>
    <string name="speed_alpha">Speed smoothing</string>
    <string name="direction_alpha">Angle smoothing</string>
    <string name="CALIB_SCORE_FORMAT">%d</string>
    <string name="calibration_score_label">Score</string>
    <string name="calibration_score_threshold_label">Score T.</string>
    <string name="transducer_error_message">Transducer Error</string>
    <string name="off_calibration_error_message">Off calibration</string>
    <string name="n2k_bus_error_message">N2K Error</string>
    <string name="device_name_edit_label">Device Name</string>
    <string name="settings_card_title">Settings</string>
    <string name="switch_enable_usb_debug">USB debug</string>
    <string name="switchVaneType">Vane type</string>
    <string name="button_set_device_name">Save</string>


</resources>